--- a/data/countries/de/bw/heilbronn/data.yaml
+++ b/data/countries/de/bw/heilbronn/data.yaml
@@ -24,7 +24,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruene-lauffen.de/
+    url: https://www.gruene-neckar-schozach.de/
 ---
 city: Leingarten
 country: DE
