--- a/data/countries/de/bw/reutlingen/data.yaml
+++ b/data/countries/de/bw/reutlingen/data.yaml
@@ -24,4 +24,4 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-badurach.de/
+    url: https://www.gruene-badurach.de/
