--- a/data/countries/de/bw/wangen/data.yaml
+++ b/data/countries/de/bw/wangen/data.yaml
@@ -8,4 +8,4 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-wangen.de/
+    url: https://www.gruene-wangen.de/
