--- a/data/countries/de/bw/esslingen/data.yaml
+++ b/data/countries/de/bw/esslingen/data.yaml
@@ -8,7 +8,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruene-es.de/
+    url: https://www.gruene-es.de/home/
   - type: FACEBOOK
     url: https://www.facebook.com/GrueneKVEsslingen
 ---
@@ -50,7 +50,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruene-kirchheim-teck.de/
+    url: https://www.gruene-kirchheim-teck.de/home-aktuelles/
 ---
 city: Leinfelden/Echterdingen
 country: DE
@@ -60,7 +60,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://gruene-le.de/
+    url: https://gruene-le.de/startseite/
 ---
 city: Ostfildern
 country: DE
