--- a/data/countries/de/bw/konstanz/data.yaml
+++ b/data/countries/de/bw/konstanz/data.yaml
@@ -8,7 +8,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://gruene-konstanz.de/
+    url: https://gruene-konstanz.de/startseite/
   - type: FACEBOOK
     url: https://www.facebook.com/Gr%C3%BCne-Konstanz-543476915678973
 ---
@@ -20,7 +20,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://gruene-singen.de/
+    url: https://gruene-singen.de/startseite/
 ---
 city: Rielasingen-Worblingen
 country: DE
@@ -30,4 +30,4 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://gruene-rielasingen-worblingen.de/
+    url: https://gruene-rielasingen-worblingen.de/start/
