--- a/data/countries/de/bw/tuebingen/data.yaml
+++ b/data/countries/de/bw/tuebingen/data.yaml
@@ -8,7 +8,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: https://www.gruene-tuebingen.de/
+    url: https://www.gruene-tuebingen.de/home/
   - type: FACEBOOK
     url: https://www.facebook.com/gruenetuebingen
   - type: TWITTER
@@ -24,4 +24,4 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-steinlach-wiesaz.de
+    url: http://www.gruene-steinlach-wiesaz.de/
